[package]
name = "broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["codec", "net"] }
anyhow = "*"
crossbeam = "*"
futures = { version = "*" }

# logger
tracing = "*"
tracing-subscriber = "*"
tracing-appender = "*"

# serde
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
serde_yaml = { version = "*" }
postcard = { version = "*", features = ["alloc"] }

#network 
local-ip-address = "*"

#tools
bytes = "*"
uuid = { version = "*", features = ["v4"] }
rs-snowflake = "*"
lazy_static = "*"
