[package]
name = "broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.25", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
anyhow = "1.0"
crossbeam = "0.8"
futures = { version = "0.3" }

#web
actix-web = { version = "4.3.0", features = [] }
actix-files = "0.6.2"
actix-multipart = "0.5.0"
actix-cors = "0.6.4"
reqwest = { version = "0.11.13", features = ["stream", "json", "multipart"] }

# logger
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.92" }
serde_yaml = { version = "0.9.17" }
postcard = { version = "1.0.2", features = ["alloc"] }

#network 
local-ip-address = "0.5.1"

#tools
bytes = "1.4.0"
uuid = { version = "1.3.0", features = ["v4"] }
rs-snowflake = "0.6.0"
lazy_static = "1.4.0"

#startup
auto-launch = "0.4.0"

#utils
screenshots = "0.5.2"
regex = "1.7.1"
chrono = "0.4.23"
image-base64 = "0.1.0"
