[package]
name = "broadcast"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "discover",
  "cleaner",
  "command",
  "config",
  "logger",
  "screen",
  "utils",
  "server",
  "storage",
]
[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
server = { path = "server" }
config = { path = "config" }
logger = { path = "logger" }
utils = { path = "utils" }
tokio = { version = "1.25", features = ["full"] }
anyhow = "1.0"

# logger
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
