[package]
name = "command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.28"
tracing = "0.1"

utils = { path = "../utils" }
