[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
storage = { path = "../storage" }
domain = { path = "../domain" }

lazy_static = "1.4.0"
utils = { path = "../utils" }
