[package]
name = "discover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7", features = ["codec", "net"] }
tokio = { version = "1.25", features = ["full"] }

# logger
tracing = "0.1"

# serde
serde = { version = "1.0", features = ["derive"] }


utils = { path = "../utils" }
config = { path = "../config" }
domain = { path = "../domain" }
