[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25", features = ["full"] }
# logger
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

utils = { path = "../utils" }
