[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures = { version = "0.3" }
anyhow = "1.0"

#web
actix-web = { version = "4.3.0", features = [] }
actix-files = "0.6.2"
actix-multipart = "0.5.0"
actix-cors = "0.6.4"
reqwest = { version = "0.11.13", features = ["stream", "json", "multipart"] }
actix-web-prom = "0.6.0"

# logger
tracing = "0.1"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.92" }
serde_yaml = { version = "0.9.17" }
postcard = { version = "1.0.2", features = ["alloc"] }

lazy_static = "1.4.0"

image-base64 = "0.1.0"

cleaner = { path = "../cleaner" }
screen = { path = "../screen" }
discover = { path = "../discover" }
utils = { path = "../utils" }
command = { path = "../command" }
config = { path = "../config" }
