[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logger
tracing = "0.1"
#network 
local-ip-address = "0.5.2"
# serde
serde = { version = "1.0", features = ["derive"] }

rs-snowflake = "0.6.0"

lazy_static = "1.4.0"

mac_address = "1.1.4"
